fix: repair navigation overflow

--- a/christmas-task/src/app_pages/toys/toys.component.scss
+++ b/christmas-task/src/app_pages/toys/toys.component.scss
@@ -1,5 +1,6 @@
 .container {
   margin: 0 auto;
   padding:0 3%;
+  padding-top: 2%;
   display: flex;
 }
